base.core/src/main/java/eapli/base/answerQuestionnairemanagement/validation/QuestionnaireAnswerGrammarParser.java
// Generated from C:/Users/joser/OneDrive/Ambiente de Trabalho/Projeto/lei21_22_s4_2di_02/base.core/src/main/java/eapli/base/answerQuestionnairemanagement/validation\QuestionnaireAnswerGrammar.g4 by ANTLR 4.10.1
package eapli.base.answerQuestionnairemanagement.validation;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuestionnaireAnswerGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, OBLIGAT=11, MANDATORY=12, OPTIONAL=13, CONDITIONAL=14, CONDITION=15, 
		REP=16, QUESTION=17, RESPONSEINPUT=18, TYPE=19, VALUECHECK=20, EXTRAINFO=21, 
		OPTION=22, OPTIONCHOICE=23, VALUE=24, MULTIPLEOPTIONCHOICE=25, OPTIONSCALING=26, 
		RESPONSE=27, FREETEXT=28, LIMITCHAR=29, LIMITCHARLINE=30, DECIMAL=31, 
		NUMERIC=32, SINGLECHOICE=33, INPUTOPTION=34, MULTIPLECHOICE=35, SORTING=36, 
		SCALING=37, SCALE=38, IDVALUE=39, NUMBER=40, DECIMALNUMBER=41, STRING=42, 
		STRING_ML=43, WS=44, NEWLINE=45;
	public static final int
		RULE_prog = 0, RULE_start = 1, RULE_header = 2, RULE_id = 3, RULE_title = 4, 
		RULE_welmsg = 5, RULE_endmsg = 6, RULE_section = 7, RULE_sid = 8, RULE_descr = 9, 
		RULE_obligat = 10, RULE_rep = 11, RULE_condicional = 12, RULE_condition = 13, 
		RULE_question = 14, RULE_qid = 15, RULE_question_ask = 16, RULE_instructions = 17, 
		RULE_type = 18, RULE_responseinput = 19, RULE_valuecheck = 20, RULE_extrainfo = 21, 
		RULE_option = 22, RULE_response = 23, RULE_responsechoice = 24, RULE_responsescaling = 25, 
		RULE_freetext = 26, RULE_limitchar = 27, RULE_limitcharline = 28, RULE_numeric = 29, 
		RULE_singlechoice = 30, RULE_singlechoiceinput = 31, RULE_inputoption = 32, 
		RULE_multiplechoice = 33, RULE_multiplechoiceinput = 34, RULE_sorting = 35, 
		RULE_scaling = 36, RULE_scale = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "start", "header", "id", "title", "welmsg", "endmsg", "section", 
			"sid", "descr", "obligat", "rep", "condicional", "condition", "question", 
			"qid", "question_ask", "instructions", "type", "responseinput", "valuecheck", 
			"extrainfo", "option", "response", "responsechoice", "responsescaling", 
			"freetext", "limitchar", "limitcharline", "numeric", "singlechoice", 
			"singlechoiceinput", "inputoption", "multiplechoice", "multiplechoiceinput", 
			"sorting", "scaling", "scale"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ID:'", "'TITLE:'", "'WELCOME MENSAGE:'", "'END MENSAGE:'", "'SECTION ID:'", 
			"'DESCRIPTION:'", "'OBLIGATORINESS:'", "'QUESTION ID:'", "'INTRUCTIONS:'", 
			"'-'", "'OBLIGAT:'", "'MANDATORY'", "'OPTIONAL'", "'CONDITIONAL'", "'CONDITION:'", 
			"'REP:'", "'QUESTION:'", "'RESPONSEINPUT:'", "'TYPE:'", "'VALUECHECK:'", 
			"'EXTRAINFO:'", "'OPTION:'", null, "'VALUE:'", null, null, "'RESPONSE:'", 
			"'FREETEXT'", "'LIMITCHAR:'", "'LIMITCHARLINE:'", "'DECIMAL'", "'NUMERIC'", 
			"'SINGLECHOICE'", "'INPUTOPTION:'", "'MULTIPLECHOICE'", "'SORTING'", 
			"'SCALING'", "'SCALE:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "OBLIGAT", 
			"MANDATORY", "OPTIONAL", "CONDITIONAL", "CONDITION", "REP", "QUESTION", 
			"RESPONSEINPUT", "TYPE", "VALUECHECK", "EXTRAINFO", "OPTION", "OPTIONCHOICE", 
			"VALUE", "MULTIPLEOPTIONCHOICE", "OPTIONSCALING", "RESPONSE", "FREETEXT", 
			"LIMITCHAR", "LIMITCHARLINE", "DECIMAL", "NUMERIC", "SINGLECHOICE", "INPUTOPTION", 
			"MULTIPLECHOICE", "SORTING", "SCALING", "SCALE", "IDVALUE", "NUMBER", 
			"DECIMALNUMBER", "STRING", "STRING_ML", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuestionnaireAnswerGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuestionnaireAnswerGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StartContext> start() {
			return getRuleContexts(StartContext.class);
		}
		public StartContext start(int i) {
			return getRuleContext(StartContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				start();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public EndmsgContext endmsg() {
			return getRuleContext(EndmsgContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			header();
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				section();
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__4 );
			setState(87);
			endmsg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	 
		public HeaderContext() { }
		public void copyFrom(HeaderContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GenerateHeaderContext extends HeaderContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public WelmsgContext welmsg() {
			return getRuleContext(WelmsgContext.class,0);
		}
		public GenerateHeaderContext(HeaderContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterGenerateHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitGenerateHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitGenerateHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		int _la;
		try {
			_localctx = new GenerateHeaderContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			id();
			setState(90);
			title();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(91);
				welmsg();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode IDVALUE() { return getToken(QuestionnaireAnswerGrammarParser.IDVALUE, 0); }
		public TerminalNode NEWLINE() { return getToken(QuestionnaireAnswerGrammarParser.NEWLINE, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(94);
			match(T__0);
			}
			setState(95);
			match(IDVALUE);
			setState(96);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(QuestionnaireAnswerGrammarParser.STRING, 0); }
		public TerminalNode NEWLINE() { return getToken(QuestionnaireAnswerGrammarParser.NEWLINE, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(98);
			match(T__1);
			}
			setState(99);
			match(STRING);
			setState(100);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WelmsgContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireAnswerGrammarParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(QuestionnaireAnswerGrammarParser.STRING, 0); }
		public TerminalNode STRING_ML() { return getToken(QuestionnaireAnswerGrammarParser.STRING_ML, 0); }
		public WelmsgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_welmsg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterWelmsg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitWelmsg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitWelmsg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WelmsgContext welmsg() throws RecognitionException {
		WelmsgContext _localctx = new WelmsgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_welmsg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(102);
			match(T__2);
			}
			setState(103);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==STRING_ML) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(104);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndmsgContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireAnswerGrammarParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(QuestionnaireAnswerGrammarParser.STRING, 0); }
		public TerminalNode STRING_ML() { return getToken(QuestionnaireAnswerGrammarParser.STRING_ML, 0); }
		public EndmsgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endmsg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterEndmsg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitEndmsg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitEndmsg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndmsgContext endmsg() throws RecognitionException {
		EndmsgContext _localctx = new EndmsgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_endmsg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(106);
			match(T__3);
			}
			setState(107);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==STRING_ML) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(108);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
	 
		public SectionContext() { }
		public void copyFrom(SectionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VerifySectionContext extends SectionContext {
		public SidContext sid() {
			return getRuleContext(SidContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public DescrContext descr() {
			return getRuleContext(DescrContext.class,0);
		}
		public ObligatContext obligat() {
			return getRuleContext(ObligatContext.class,0);
		}
		public RepContext rep() {
			return getRuleContext(RepContext.class,0);
		}
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public VerifySectionContext(SectionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterVerifySection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitVerifySection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitVerifySection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_section);
		int _la;
		try {
			_localctx = new VerifySectionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			sid();
			setState(111);
			title();
			setState(112);
			descr();
			setState(113);
			obligat();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==REP) {
				{
				setState(114);
				rep();
				}
			}

			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117);
				question();
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SidContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(QuestionnaireAnswerGrammarParser.NUMBER, 0); }
		public TerminalNode NEWLINE() { return getToken(QuestionnaireAnswerGrammarParser.NEWLINE, 0); }
		public SidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterSid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitSid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitSid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SidContext sid() throws RecognitionException {
		SidContext _localctx = new SidContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__4);
			setState(123);
			match(NUMBER);
			setState(124);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescrContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireAnswerGrammarParser.NEWLINE, 0); }
		public TerminalNode STRING() { return getToken(QuestionnaireAnswerGrammarParser.STRING, 0); }
		public TerminalNode STRING_ML() { return getToken(QuestionnaireAnswerGrammarParser.STRING_ML, 0); }
		public DescrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterDescr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitDescr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitDescr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescrContext descr() throws RecognitionException {
		DescrContext _localctx = new DescrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_descr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__5);
			setState(127);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==STRING_ML) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(128);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObligatContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(QuestionnaireAnswerGrammarParser.NEWLINE, 0); }
		public TerminalNode MANDATORY() { return getToken(QuestionnaireAnswerGrammarParser.MANDATORY, 0); }
		public TerminalNode OPTIONAL() { return getToken(QuestionnaireAnswerGrammarParser.OPTIONAL, 0); }
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public ObligatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obligat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).enterObligat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionnaireAnswerGrammarListener ) ((QuestionnaireAnswerGrammarListener)listener).exitObligat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionnaireAnswerGrammarVisitor ) return ((QuestionnaireAnswerGrammarVisitor<? extends T>)visitor).visitObligat(this);
			else return visitor.visitChildren(this);
		}
	}
